# smol-solana-program-library

./: Cargo.toml
associated-token-account/program/: Cargo.toml
instruction-padding/program/: Cargo.toml
libraries/discriminator/: Cargo.toml
libraries/discriminator/syn/: Cargo.toml
libraries/pod/: Cargo.toml
libraries/program-error/: Cargo.toml
libraries/program-error/derive/: Cargo.toml
libraries/tlv-account-resolution/: Cargo.toml
libraries/type-length-value/: Cargo.toml
memo/program/: Cargo.toml
token-group/interface/: Cargo.toml
token-metadata/interface/: Cargo.toml
token/program/: Cargo.toml
token/program-2022/: Cargo.toml
token/transfer-hook/interface/: Cargo.toml
