resolver = "2"

[workspace]
members = [
  "associated-token-account/program",
  "instruction-padding/program",
  "libraries/discriminator",
  "libraries/pod",
  "libraries/program-error",
  "libraries/tlv-account-resolution",
  "libraries/type-length-value",
  "memo/program",
  "token-group/interface",
  "token-metadata/interface",
  "token/program",
  "token/program-2022",
  "token/transfer-hook/interface",
]
