[package]
name = "spl-tlv-account-resolution"
version = "0.5.1"
description = "Solana Program Library TLV Account Resolution Interface"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
serde-traits = ["dep:serde"]
test-sbf = []

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
serde = { version = "1.0.195", optional = true }
solana-program = { git = "https://github.com/protecc-labs/smol-solana.git" }
spl-discriminator = { version = "0.1", path = "../discriminator" }
spl-program-error = { version = "0.3", path = "../program-error" }
spl-type-length-value = { version = "0.3", path = "../type-length-value" }
spl-pod = { version = "0.1", path = "../pod" }

[dev-dependencies]
futures = "0.3.30"
futures-util = "0.3"
solana-client = { git = "https://github.com/protecc-labs/smol-solana.git" }
solana-sdk = { git = "https://github.com/protecc-labs/smol-solana.git" }
spl-discriminator = { version = "0.1", path = "../discriminator" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
