[package]
name = "spl-memo"
version = "4.0.0"
description = "Solana Program Library Memo"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = { git = "https://github.com/protecc-labs/smol-solana.git" }

[dev-dependencies]
solana-sdk = { git = "https://github.com/protecc-labs/smol-solana.git" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
