[package]
name = "spl-token"
version = "4.0.0"
description = "Solana Program Library Token"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.7"
bytemuck = "1.14.0"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.2"
solana-program = { git = "https://github.com/protecc-labs/smol-solana.git" }
thiserror = "1.0"

[dev-dependencies]
lazy_static = "1.4.0"
proptest = "1.4"
serial_test = "3.0.0"
solana-sdk = { git = "https://github.com/protecc-labs/smol-solana.git" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
